--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ span{
 }
 
 .home-content p{
-    font-size: 1.6rem;
+    font-size: 3rem;
 }
 
 .social-media a{
@@ -258,6 +258,18 @@ span{
     width: 100%;
     transition: .5s ease;
     opacity: 0.7;
+}
+
+.port-box-img1{
+    height: 300px;
+}
+
+.port-box-img2{
+    height: 300px;
+}
+
+.port-box-img3{
+    height: 300px;
 }
 
 .portfolio-box:hover img{
