--- a/style.css
+++ b/style.css
@@ -60,8 +60,12 @@ section{
     font-weight: 700;
 }
 
-.navbar a:hover,
-.navbar a.active{
+.navbar a:hover{
+    color: var(--main-color);
+}
+
+.nav-link.active{
+    font-weight: bold;
     color: var(--main-color);
 }
 
@@ -241,9 +245,9 @@ span{
 
 .portfolio-container{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(2,1fr);
     align-items: center;
-    gap: 2.5rem;
+    gap: 15rem;
 }
 
 .portfolio-container .portfolio-box{
@@ -268,9 +272,9 @@ span{
     height: 300px;
 }
 
-.port-box-img3{
+/* .port-box-img3{
     height: 300px;
-}
+} */
 
 .portfolio-box:hover img{
     transform: scale(1.1);
@@ -298,11 +302,14 @@ span{
 }
 
 .portfolio-layer h4{
+    color: black;
     font-size: 3rem;
 }
 
 .portfolio-layer p{
-    font-size: 1.6rem;
+    font-size: 2.2rem;
+    color: black;
+    font-weight: 700;
     margin: .3rem 0 1rem;
 }
 
@@ -353,11 +360,11 @@ span{
     width: 49%;
 }
 
-.contact form .input-box input:hover{
+.contact form .input-box input:focus{
     border: 2px solid var(--main-color);
 }
 
-.contact form textarea:hover{
+.contact form textarea:focus{
     border: 2px solid var(--main-color);
 }
 
@@ -523,11 +530,19 @@ span{
 }
 
 @media (max-width: 450px){
+    .portfolio-container{
+        grid-template-columns: 1fr;
+    }
+    
     html{
         font-size: 50%;
     }
 
     .contact form .input-box input{
         width: 100%;
+    }
+
+    .footer-text{
+        font-size: 1.1rem;
     }
 }
