--- a/main.css
+++ b/main.css
@@ -152,7 +152,7 @@ span{
     font-size: 1.6rem;
     color: var(--bg-color);
     letter-spacing: .1rem;
-    font-weight: 600;
+    font-weight: 850;
     transition: .5s ease;
 }
 
@@ -235,22 +235,22 @@ span{
     margin: 1rem 0 3rem;
 }
 
-.portfolio{
+.project{
     background: var(--snd-bf-color);
 }
 
-.portfolio h2{
+.project h2{
     margin-bottom: 4rem;
 }
 
-.portfolio-container{
+.project-container{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     align-items: center;
     gap: 15rem;
 }
 
-.portfolio-container .portfolio-box{
+.project-container .project-box{
     position: relative;
     border-radius: 2rem;
     box-shadow: 0 0 1rem var(--bg-color);
@@ -258,10 +258,10 @@ span{
     display: flex;
 }
 
-.portfolio-box img{
+.project-box img{
     width: 100%;
     transition: .5s ease;
-    opacity: 0.7;
+    opacity: 0.5;
 }
 
 .port-box-img1{
@@ -276,11 +276,11 @@ span{
     height: 300px;
 } */
 
-.portfolio-box:hover img{
+.project-box:hover img{
     transform: scale(1.1);
 }
 
-.portfolio-box .portfolio-layer{
+.project-box .project-layer{
     position: absolute;
     bottom: 0;
     left: 0;
@@ -297,23 +297,23 @@ span{
     transition: .5s ease;
 }
 
-.portfolio-box:hover .portfolio-layer{
+.project-box:hover .project-layer{
     transform: translateY(0);
 }
 
-.portfolio-layer h4{
+.project-layer h4{
     color: black;
     font-size: 3rem;
 }
 
-.portfolio-layer p{
+.project-layer p{
     font-size: 2.2rem;
     color: black;
-    font-weight: 700;
+    font-weight: 800;
     margin: .3rem 0 1rem;
 }
 
-.portfolio-layer a{
+.project-layer a{
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -323,7 +323,7 @@ span{
     border-radius: 50%;
 }
 
-.portfolio-layer a i{
+.project-layer a i{
     font-size: 2rem;
     color: var(--snd-bf-color);
 }
@@ -430,7 +430,7 @@ span{
         padding: 7rem;
     }
 
-    .portfolio{
+    .project{
         padding-bottom: 7rem;
     }
 
@@ -504,17 +504,17 @@ span{
         margin-bottom: 3rem;
     }
 
-    .portfolio h2{
+    .project h2{
         margin-bottom: 3rem;
     }
 
-    .portfolio-container{
+    .project-container{
         grid-template-columns: repeat(2,1fr);
     }
 }
 
 @media (max-width: 617){
-    .portfolio-container{
+    .project-container{
         grid-template-columns: 1fr;
     }
 
@@ -530,7 +530,7 @@ span{
 }
 
 @media (max-width: 450px){
-    .portfolio-container{
+    .project-container{
         grid-template-columns: 1fr;
     }
     
